working gallery updted ps, no folder restructring

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@ Open Cart
     <h4> Try Our First time Bundle</h4>
     <div class="special-items-container">
       <figure class="special-product">
-        <figcaption>Potting Soil</figcaption>
-        <img src="images/purse1.png" alt="potting soil"  >
+        <figcaption>Small Pillow</figcaption>
+        <img src="images/products/cowboyssplw1.1.webp" alt="potting soil"  >
       </figure>
       <figure class="special-product">
-        <figcaption>Watering Can</figcaption>
-        <img src="images/purse2.jpg" alt="watering can" >
+        <figcaption>Phone Stand</figcaption>
+        <img src="images/products/cowboysps1.1.webp" alt="watering can" >
       </figure>
     </div>
 
@@ -105,21 +105,21 @@ Open Cart
       <div class="bundle">
 
         <figure class="bundle-deal">
-          <figcaption>Potting Soil +</figcaption>
-          <img src="images/purse3.jpg"
+          <figcaption>stealers +</figcaption>
+          <img src="images/products/stealersps1.1.webp"
                 alt="potting soil" width="200px">
         </figure>
         
         <figure class="bundle-deal">
-          <figcaption>Watering Can +</figcaption>
-          <img src="images/purse3.jpg"
+          <figcaption>stand +</figcaption>
+          <img src="images/products/cowboyssp2.1.webp"
                 alt="watering can" width="200px">
 
         </figure>
       </div>
         <figure class="bundle-deal">
-          <figcaption>Aloe Plant</figcaption>
-          <img src="images/purse3.jpg"
+          <figcaption>purse</figcaption>
+          <img src="images/products/smallpurse1.webp"
                 alt="aloe plant" width="200px">
 
         </figure>
@@ -197,26 +197,26 @@ Open Cart
   <button id="close-category" >Close</button>
           <div class="category">
             <a
-              href="gallery.html"><img class="tree-category" src="images/purse1.png" alt="click here for birch tree description"></a>
+              href="gallery.html"><img class="tree-category" src="images/products/cowboysps1.1.webp" alt="click here for birch tree description"></a>
             <a
-              href="gallery.html"><img class="tree-category" src="images/purse1.png" alt="click here for maple trees description"></a>
-            <a href="gallery.html"><img  class="tree-category" src="images/purse1.png" alt="click here for apple trees description"></a>
+              href="gallery.html"><img class="tree-category" src="images/products/stealersps1.1.webp" alt="click here for maple trees description"></a>
+            <a href="gallery.html"><img  class="tree-category" src="images/products/sportspsdemo1.webp" alt="click here for apple trees description"></a>
           </div>
           <div class="category">
             <a
-              href="gallery.html"><img class="plant-category" src="images/purse1.png" alt="click here for string of peerls plant description"></a>
+              href="gallery.html"><img class="plant-category" src="images/products/afroculturelgb1.1.webp" alt="click here for string of peerls plant description"></a>
             <a
-              href="gallery.html"><img class="plant-category" src="images/purse1.png" alt="click here for the spider plant description"></a>
+              href="gallery.html"><img class="plant-category" src="images/products/tanafrolgb2.1.webp" alt="click here for the spider plant description"></a>
             <a
-              href="gallery.html"><img class="plant-category" src="images/purse1.png" alt="click here for aloe plants description"></a>
+              href="gallery.html"><img class="plant-category" src="images/products/smallpurse1.webp" alt="click here for aloe plants description"></a>
           </div>
           <div class="category">
             <a
-              href="gallery.html"><img class="equipment-category" src="images/purse1.png" alt="click here for wwatering can description"></a>
+              href="gallery.html"><img class="equipment-category" src="images/products/cowboyssp2.1.webp" alt="click here for wwatering can description"></a>
             <a
-              href="gallery.html"><img class="equipment-category" src="images/purse1.png" alt="click here for birdhouse's description"></a>
+              href="gallery.html"><img class="equipment-category" src="images/products/cowboyslgplw2.1.webp" alt="click here for birdhouse's description"></a>
             <a
-              href="gallery.html"><img class="equipment-category" src="images/purse1.png" alt="click here for potting soil description"></a>
+              href="gallery.html"><img class="equipment-category" src="images/products/smlpillowdemo1.1.webp" alt="click here for potting soil description"></a>
           </div>
           <button id="category-gallery"><a href="gallery.html">see gallery</a></button>
 
