--- a/gallery.html
+++ b/gallery.html
@@ -117,7 +117,7 @@
 
   </footer>
   <script src="scripts/cart.js"></script>
-  <script src="scripts/gallery.js"></script>
+  <script src="gallery.js"></script>
 <script src="scripts/modal.js"></script>
   <script src="scripts/main.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
